force-app/main/default/objects/CIS_Inventory_Detail__c/CIS_Inventory_Detail__c.object-meta.xml
<CustomObject>
    <label>CIS Inventory Detail</label>
    <nameField>
        <displayFormat>Inventory Detail - {000}</displayFormat>
        <label>CIS Inventory Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CIS Inventory Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>