force-app/main/default/objects/CIS_Inventory_Detail__c/fields/Customer_Information_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Customer_Information_Sheet__c</fullName>
    <label>Customer Information Sheet</label>
    <referenceTo>Customer_Information_Sheet__c</referenceTo>
    <relationshipLabel>CIS Inventory Details</relationshipLabel>
    <relationshipName>CIS_Inventory_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>