force-app/main/default/objects/CIS_Inventory_Detail__c/fields/Serial_DIU__c.field-meta.xml
<CustomField>
    <fullName>Serial_DIU__c</fullName>
    <label>Serial# DIU</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>