force-app/main/default/objects/CIS_Inventory_Detail__c/fields/Verfication_Code_VTM__c.field-meta.xml
<CustomField>
    <fullName>Verfication_Code_VTM__c</fullName>
    <formula>RIGHT(TEXT(((999-Value(MID(Serial_VTM__c ,1,3)))*(999-Value(MID(Serial_VTM__c ,4,3)))*(999-Value(MID(Serial_VTM__c,7,3))))),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verfication Code VTM</label>
    <type>Text</type>
</CustomField>