force-app/main/default/objects/CIS_Inventory_Detail__c/fields/Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code__c</fullName>
    <formula>RIGHT(TEXT(((999-Value(MID(Name ,1,3)))*(999-Value(MID( Name ,4,3)))*(999-Value(MID(Name,7,3))))),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verfication Code</label>
    <type>Text</type>
</CustomField>