force-app/main/default/objects/CIS_Inventory_Detail__c/fields/Verification_Code_DIU__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code_DIU__c</fullName>
    <formula>RIGHT(TEXT(((999-Value(MID(Serial_DIU__c  ,1,3)))*(999-Value(MID(Serial_DIU__c ,4,3)))*(999-Value(MID(Serial_DIU__c,7,3))))),4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verfication Code DIU</label>
    <type>Text</type>
</CustomField>