force-app/main/default/objects/CIS_Inventory_Detail__c/validationRules/Serial_Number_DIU_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_Number_DIU_Numeric</fullName>
    <active>true</active>
    <description>Serial Number DIU should be just numeral</description>
    <errorConditionFormula>NOT(ISNUMBER( Serial_DIU__c ))</errorConditionFormula>
    <errorDisplayField>Serial_DIU__c</errorDisplayField>
    <errorMessage>Serial# DIU should be numeric only</errorMessage>
</ValidationRule>