force-app/main/default/objects/CIS_Inventory_Detail__c/validationRules/Serial_Number_VTM_Atleast_Nine_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_Number_VTM_Atleast_Nine_Digits</fullName>
    <active>true</active>
    <description>Serial Number VTM Should be at least nine digits</description>
    <errorConditionFormula>LEN( Serial_VTM__c ) &lt; 9</errorConditionFormula>
    <errorDisplayField>Serial_VTM__c</errorDisplayField>
    <errorMessage>Serial Number VTM Should be at least nine digits</errorMessage>
</ValidationRule>