force-app/main/default/objects/CIS_Inventory_Detail__c/validationRules/Serial_Number_VTM_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_Number_VTM_Numeric</fullName>
    <active>true</active>
    <description>Serial Number VTM should be numeric</description>
    <errorConditionFormula>NOT(ISNUMBER( Serial_VTM__c ))</errorConditionFormula>
    <errorDisplayField>Serial_VTM__c</errorDisplayField>
    <errorMessage>Serial# VTM should be numeric only</errorMessage>
</ValidationRule>